// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic offsets renders correctly for a spread offset of "both" 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

.c3 {
  margin-left: auto;
  margin-right: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:768px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c3 {
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c3 c1"
  >
    Column
  </div>
</div>
`;

exports[`basic offsets renders correctly for a spread offset of "left" 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

.c3 {
  margin-left: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:768px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c3 {
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c3 c1"
  >
    Column
  </div>
</div>
`;

exports[`basic offsets renders correctly for a spread offset of "right" 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

.c2 {
  margin-right: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:768px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c3 c1"
  >
    Column
  </div>
</div>
`;

exports[`basic offsets renders correctly for a spread offset of values between 1 and 11 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

.c3 {
  margin-left: 25%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:768px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c3 {
    margin-left: 0;
  }
}

@media (max-width:480px) {
  .c3 {
    margin-left: 0;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c3 c1"
  >
    Column
  </div>
</div>
`;

exports[`basic sizes renders correctly when all columns have sizes 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 8.333333333333332%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:768px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c4 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c4 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c5 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c5 {
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c3 c1"
  >
    Column
  </div>
  <div
    class="c4 c1"
  >
    Column
  </div>
  <div
    class="c5 c1"
  >
    Column
  </div>
</div>
`;

exports[`basic sizes renders correctly when one of the columns does not have a size 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 8.333333333333332%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:768px) {
  .c4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

@media (max-width:768px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c5 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c5 {
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c3 c1"
  >
    Column
  </div>
  <div
    class="c4 c1"
  >
    Column
  </div>
  <div
    class="c5 c1"
  >
    Column
  </div>
</div>
`;

exports[`basic sizes renders correctly when the first column does not have a size 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c5 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 8.333333333333332%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

@media (max-width:768px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c4 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c4 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c5 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c5 {
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c3 c1"
  >
    Column
  </div>
  <div
    class="c4 c1"
  >
    Column
  </div>
  <div
    class="c5 c1"
  >
    Column
  </div>
</div>
`;

exports[`basic sizes renders correctly when there is space still left on the right 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:768px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c3 {
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c3 c1"
  >
    Column
  </div>
</div>
`;

exports[`renders correctly for basic columns 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c2 c1"
  >
    Column
  </div>
</div>
`;

exports[`variable offsets renders correctly when all spreadOffsets are specified 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 91.66666666666666%;
}

.c2 {
  margin-left: 8.333333333333332%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:1440px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 83.33333333333334%;
  }
}

@media (max-width:1200px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 75%;
  }
}

@media (max-width:1024px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 58.333333333333336%;
  }
}

@media (max-width:480px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 50%;
  }
}

@media (max-width:1440px) {
  .c2 {
    margin-left: 16.666666666666664%;
  }
}

@media (max-width:1200px) {
  .c2 {
    margin-left: 25%;
  }
}

@media (max-width:1024px) {
  .c2 {
    margin-left: 33.33333333333333%;
  }
}

@media (max-width:768px) {
  .c2 {
    margin-left: 41.66666666666667%;
  }
}

@media (max-width:480px) {
  .c2 {
    margin-left: 50%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
</div>
`;

exports[`variable offsets renders correctly when only mobile spread offset is specified 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:480px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
</div>
`;

exports[`variable offsets renders correctly when only spreadOffset and spreadDesktopOffset is specified 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 83.33333333333334%;
}

.c2 {
  margin-left: 16.666666666666664%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:1024px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media (max-width:768px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:1024px) {
  .c2 {
    margin-left: 33.33333333333333%;
  }
}

@media (max-width:768px) {
  .c2 {
    margin-left: 0;
  }
}

@media (max-width:480px) {
  .c2 {
    margin-left: 0;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
</div>
`;

exports[`variable offsets renders correctly when only tablet spread offset is specified 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
</div>
`;

exports[`variable sizes renders correctly when all spreads are specified 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 91.66666666666666%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 8.333333333333332%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:1440px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 83.33333333333334%;
  }
}

@media (max-width:1200px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 75%;
  }
}

@media (max-width:1024px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 58.333333333333336%;
  }
}

@media (max-width:480px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 50%;
  }
}

@media (max-width:1440px) {
  .c3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 16.666666666666664%;
  }
}

@media (max-width:1200px) {
  .c3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 25%;
  }
}

@media (max-width:1024px) {
  .c3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 33.33333333333333%;
  }
}

@media (max-width:768px) {
  .c3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 41.66666666666667%;
  }
}

@media (max-width:480px) {
  .c3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 50%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c3 c1"
  >
    Column
  </div>
</div>
`;

exports[`variable sizes renders correctly when only mobile spread is specified 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:480px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media (max-width:480px) {
  .c3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 33.33333333333333%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c3 c1"
  >
    Column
  </div>
</div>
`;

exports[`variable sizes renders correctly when only spread and spreadDesktop is specified 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 83.33333333333334%;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:1024px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media (max-width:768px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:1024px) {
  .c3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 33.33333333333333%;
  }
}

@media (max-width:768px) {
  .c3 {
    width: 100%;
  }
}

@media (max-width:480px) {
  .c3 {
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c3 c1"
  >
    Column
  </div>
</div>
`;

exports[`variable sizes renders correctly when only tablet spread is specified 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0:last-child {
  margin-bottom: -0.5rem;
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media (max-width:480px) {
  .c2 {
    width: 100%;
  }
}

@media (max-width:768px) {
  .c3 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 33.33333333333333%;
  }
}

@media (max-width:480px) {
  .c3 {
    width: 100%;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c1"
  >
    Column
  </div>
  <div
    class="c3 c1"
  >
    Column
  </div>
</div>
`;
